@@ -30,20 +30,10 @@ ELSE (NOT SMOKE_PATH)
 	MESSAGE (STATUS "Looking for SMOKE library - found - ${SMOKE_PATH}")
 ENDIF (NOT SMOKE_PATH)
 
-# find 'gmcs'
-MESSAGE (STATUS "Looking for gmcs")
-FIND_PROGRAM (GMCS_PATH gmcs)
-IF (NOT GMCS_PATH)
-	MESSAGE (STATUS "Looking for gmcs - not found")
-	MESSAGE (FATAL_ERROR "gmcs was not found on your system")
-ELSE (NOT GMCS_PATH)
-	MESSAGE (STATUS "Looking for gmcs - found - ${GMCS_PATH}")
-ENDIF (NOT GMCS_PATH)
-
 SET( UICS_PATH ${CMAKE_CURRENT_BINARY_DIR}/tools/uics/uics )
 SET( CSRCC_PATH ${CMAKE_CURRENT_BINARY_DIR}/tools/csrcc/csrcc )
 
-INCLUDE_DIRECTORIES (${QT_INCLUDES})
+INCLUDE_DIRECTORIES (${QT_INCLUDES} ${CMAKE_SOURCE_DIR}/smoke)
 ADD_LIBRARY (qyoto MODULE ${SRC_CPP})
 TARGET_LINK_LIBRARIES (qyoto smokeqt ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY})
 
