@@ -1,3 +1,7 @@
+2007-04-14  Richard Dale  <rdale@foton.es>
+	
+	* Fixed some compiler warnings
+
 2007-04-13  Arno Rehn  <arno@arnorehn.de>
 
 	* Fixed CMakeLists.txt's to work with the new directory structure. Some lines of
